--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -1,4 +1,4 @@
-name: 'Terraform'
+name: Terraform
 
 on:
   push:
@@ -9,11 +9,15 @@ on:
 permissions:
   contents: read
 
+env:
+  # Tell the Terraform CLI which Cloud org & workspace to use
+  TF_CLOUD_ORGANIZATION: "awscloudcore-hub"
+  TF_WORKSPACE:           "s3-uploader"
+
 jobs:
   terraform:
-    name: 'Terraform'
+    name: Terraform
     runs-on: ubuntu-latest
-    environment: demo
 
     defaults:
       run:
@@ -21,36 +25,35 @@ jobs:
         working-directory: ./terraform
 
     steps:
-    - name: Checkout Repository
-      uses: actions/checkout@v4
+      - name: Checkout Repository
+        uses: actions/checkout@v4
 
-   
-    # Package the Lambda function
-    - name: Package Lambda Function
-      run: |
-        cd ../lambda
-        zip -r9 lambda_function_payload.zip lambda_function.py
-        mv lambda_function_payload.zip ../terraform/
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v2
+        with:
+          aws-access-key-id:     ${{ secrets.REACT_APP_AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.REACT_APP_AWS_SECRET_ACCESS_KEY }}
+          aws-region:            ${{ secrets.REACT_APP_AWS_REGION }}
 
-    - name: Setup Terraform
-      uses: hashicorp/setup-terraform@v3
-      with:
-        cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
+      - name: Setup Terraform CLI
+        uses: hashicorp/setup-terraform@v3
+        with:
+          cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
 
-    - name: Terraform Init
-      run: terraform init
+      - name: Terraform Init
+        # reconfigure remote backend if needed
+        run: terraform init -reconfigure
 
-    - name: Terraform Format Check
-      run: terraform fmt -check
-      continue-on-error: true
+      - name: Terraform Format Check
+        run: terraform fmt -check
+        continue-on-error: true
 
-    - name: Terraform Validate
-      run: terraform validate
+      - name: Terraform Validate
+        run: terraform validate
 
-    - name: Terraform Plan
-      run: terraform plan -no-color -input=false
-      continue-on-error: true
+      - name: Terraform Plan
+        run: terraform plan -input=false
 
-    - name: Terraform Apply
-      if: github.ref == 'refs/heads/main' && github.event_name == 'push'
-      run: terraform apply -auto-approve -input=false
+      - name: Terraform Apply
+        if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+        run: terraform apply -auto-approve
