--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -9,47 +9,49 @@ on:
 permissions:
   contents: read
 
-
 jobs:
   terraform:
-    name: Terraform
     runs-on: ubuntu-latest
-
     defaults:
       run:
         shell: bash
         working-directory: ./terraform
 
     steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v4
+    - name: Checkout Repository
+      uses: actions/checkout@v4
 
-      - name: Configure AWS Credentials
-        uses: aws-actions/configure-aws-credentials@v2
-        with:
-          aws-access-key-id:     ${{ secrets.REACT_APP_AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.REACT_APP_AWS_SECRET_ACCESS_KEY }}
-          aws-region:            ${{ secrets.REACT_APP_AWS_REGION }}
+    - name: Configure AWS Credentials
+      uses: aws-actions/configure-aws-credentials@v2
+      with:
+        aws-access-key-id:     ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws-region:            ${{ secrets.AWS_REGION }}
 
-      - name: Setup Terraform CLI
-        uses: hashicorp/setup-terraform@v3
-        with:
-          cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
+    - name: Package Lambda Function
+      run: |
+        cd ../lambda
+        zip -r9 lambda_function_payload.zip lambda_function.py
+        mv lambda_function_payload.zip ../terraform/
 
-      - name: Terraform Init
-        # reconfigure remote backend if needed
-        run: terraform init -reconfigure
+    - name: Setup Terraform CLI
+      uses: hashicorp/setup-terraform@v3
+      with:
+        cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
 
-      - name: Terraform Format Check
-        run: terraform fmt -check
-        continue-on-error: true
+    - name: Terraform Init
+      run: terraform init -reconfigure
 
-      - name: Terraform Validate
-        run: terraform validate
+    - name: Terraform Format Check
+      run: terraform fmt -check
+      continue-on-error: true
 
-      - name: Terraform Plan
-        run: terraform plan -input=false
+    - name: Terraform Validate
+      run: terraform validate
 
-      - name: Terraform Apply
-        if: github.ref == 'refs/heads/main' && github.event_name == 'push'
-        run: terraform apply -auto-approve
+    - name: Terraform Plan
+      run: terraform plan -input=false
+
+    - name: Terraform Apply
+      if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+      run: terraform apply -auto-approve
